GBL-1966 / TSK-2176 -- фух, я победил цитаты в результатах поиска. Плюс поправил несколько ошибок, которые не были обнаружены раньше.

--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageEventHandlerService_CL.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageEventHandlerService_CL.adoc
@@ -49,6 +49,6 @@ public class ApprovalStageEventHandlerService : ApprovalDesignerEventHandlerServ
 |Вызывается при изменении состояния карточки.
 |===
 
-== Примечания
+== Примечание
 
 Если у передаваемой на обработку карточки этапа `ApprovalStage` в `MainInfo.ServiceTypeName` прописан собственный тип сервиса-обработчика, создаётся его экземпляр и используется его бизнес-логика для работы внутри `ApprovalStageEventHandlerService`.
