--- a/modules/BackOffice-ObjectModel-Services-I/pages/ISignatureService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-I/pages/ISignatureService_IN.adoc
@@ -17,5 +17,5 @@ public interface ISignatureService
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`xref:CheckSignatureResult_MT.adoc[CheckSignatureResult CheckSignature(byte[], Stream, X509Certificate2, bool, bool, DateTime?);]` |Проверяет подпись.
+|`xref:CheckSignatureResult_MT.adoc[CheckSignatureResult CheckSignature(byte[\], Stream, X509Certificate2, bool, bool, DateTime?);]` |Проверяет подпись.
 |===
