--- a/modules/Platform-ObjectManager-CardManager/pl-om-cardmanager.adoc
+++ b/modules/Platform-ObjectManager-CardManager/pl-om-cardmanager.adoc
@@ -30,6 +30,7 @@
 ****** xref:CardManager.GetLinksToCard_MT.adoc[]
 ****** xref:CardManager.GetLinksFromCard_MT.adoc[]
 ****** xref:CardManager.GetSearchAggregationItemsRequest_MT.adoc[]
+****** xref:CardManager.GetSearchFilesCitationsRequest_MT.adoc[]
 ****** xref:CardManager.GetViewData_MT.adoc[]
 ****** xref:CardManager.GetViewData_1_MT.adoc[]
 ****** xref:CardManager.GetViewData_2_MT.adoc[]
@@ -54,6 +55,10 @@
 ****** xref:CardManager.PurgeCards_1_MT.adoc[]
 ****** xref:CardManager.PurgeCards_2_MT.adoc[]
 ****** xref:CardManager.RestoreCard_MT.adoc[]
+****** xref:CardManager.SearchFilesCitations_MT.adoc[]
 ***** xref:Connection_CL.adoc[]
+***** xref:CitationFileItem_CL.adoc[]
 ***** xref:ClearLogStrategy_EN.adoc[]
 ***** xref:CryptObjectType_EN.adoc[]
+***** xref:FilesCitationInfo_CL.adoc[]
+***** xref:SearchFilesCitationsRequest_CL.adoc[]
