--- a/modules/Platform-ObjectManager-SearchModel/pages/SearchModel_NS.adoc
+++ b/modules/Platform-ObjectManager-SearchModel/pages/SearchModel_NS.adoc
@@ -16,7 +16,7 @@
 |`ConditionGroupCollection` |Предоставляет методы для работы с коллекцией `ConditionGroup`.
 |`ControlLayout` |Определяет макет для параметров поискового запроса внутри формы.
 |`ControlLayoutCollection` |Предоставляет методы для работы с коллекцией `ControlLayout`.
-|`FullTextSearch` |Реализует модель полнотекстового серверного поиска.
+|`xref:FullTextSearch_CL.adoc[FullTextSearch]` |Реализует модель полнотекстового серверного поиска.
 |`xref:JoinSection_CL.adoc[JoinSection]` |Предоставляет данные присоединенной секции в поисковом запросе.
 |`JoinSectionCollection` |Предоставляет методы для работы с коллекцией `JoinSection`.
 |`Scope` |Описывает ограничения поиска.
