--- a/modules/Platform-ObjectManager-SearchModel/pages/SearchQuery_CL.adoc
+++ b/modules/Platform-ObjectManager-SearchModel/pages/SearchQuery_CL.adoc
@@ -21,7 +21,7 @@ public abstract class SearchQuery
 |`AttributiveSearch` |Возвращает методы атрибутивного поиска.
 |`CombineResults` |Возвращает или задает флаг объединения результатов поиска.
 |`DirectXml` |Возвращает или задает значение, указывающее, может ли пользователь непосредственно изменить XML.
-|`FullTextSearch` |Возвращает методы полнотекстового поиска.
+|`xref:FullTextSearch.SearchQuery_PR.adoc[FullTextSearch]` |Возвращает методы полнотекстового поиска.
 |`IncludeArchived` |Возвращает или задает требование включения в область поиска архивных карточек.
 |`IncludeDeleted` |Возвращает или задает требование включения в область поиска удаленных карточек.
 |`IncludeLinkedCards` |Возвращает или задает требование включения в область поиска карточки связанные с найденными ссылкой.
