--- a/modules/Platform-ObjectManager-SearchModel/pl-om-searchmodel.adoc
+++ b/modules/Platform-ObjectManager-SearchModel/pl-om-searchmodel.adoc
@@ -47,4 +47,9 @@
 ****** xref:ConditionGroupOperation_EN.adoc[]
 ****** xref:ConditionOperation_EN.adoc[]
 ****** xref:FieldSubtype_EN.adoc[]
+****** xref:FullTextSearch.Mode_PR.adoc[]
+****** xref:FullTextSearch.QueryString_PR.adoc[]
+****** xref:FullTextSearch.SearchQuery_PR.adoc[]
+****** xref:FullTextSearch.WithCitations_PR.adoc[]
+****** xref:FullTextSearch_CL.adoc[]
 ****** xref:SearchAggregationItemsResultType_EN.adoc[]
