--- a/modules/Platform-WinForms/pages/NavExtension_CL.adoc
+++ b/modules/Platform-WinForms/pages/NavExtension_CL.adoc
@@ -47,10 +47,10 @@ public class NavExtension : CardControl, INavExtension, INavCardSubTypesExtensio
 |`GetExtensionName(NavExtensionTypes)` |Возвращает название заданного расширения.
 |`xref:NavExtension.InvokeCommand_MT.adoc[InvokeCommand(NavCommand, NavCommandContext)]` |Вызов указанной команды расширения.
 |`InvokeStandardCommand(NavStandardCommand, NavCommandContext, Object)` |Вызов стандартной команды.
-|`xref:NavExtension.LookupAccounts_MT.adoc[LookupAccounts(String[], SecurityIdentifier[], String[], NavPickerAccountTypes[])]` |Формирует коллекцию идентификаторов безопасности SID из коллекции имён учетных записей.
-|`xref:NavExtension.LookupCardTypes_MT.adoc[LookupCardTypes(Guid[], Guid[])]` |Сопоставляет заданной коллекции карточек их подтипы.
-|`xref:NavExtension.LookupNames_MT.adoc[LookupNames(NavPickerNameFormat, NavPickerNameFormat, String[], String[])]` |Формирует по заданным учетным данным коллекцию учетных данных заданного формата.
-|`xref:NavExtension.LookupSids_MT.adoc[LookupSids(SecurityIdentifier[], String[], String[], NavPickerAccountTypes[])]` |Формирует коллекцию учетных записей из заданной коллекции идентификаторов безопасности SID.
+|`xref:NavExtension.LookupAccounts_MT.adoc[LookupAccounts(String[\], SecurityIdentifier[\], String[\], NavPickerAccountTypes[\])]` |Формирует коллекцию идентификаторов безопасности SID из коллекции имён учетных записей.
+|`xref:NavExtension.LookupCardTypes_MT.adoc[LookupCardTypes(Guid[\], Guid[\])]` |Сопоставляет заданной коллекции карточек их подтипы.
+|`xref:NavExtension.LookupNames_MT.adoc[LookupNames(NavPickerNameFormat, NavPickerNameFormat, String[\], String[\])]` |Формирует по заданным учетным данным коллекцию учетных данных заданного формата.
+|`xref:NavExtension.LookupSids_MT.adoc[LookupSids(SecurityIdentifier[\], String[\], String[\], NavPickerAccountTypes[\])]` |Формирует коллекцию учетных записей из заданной коллекции идентификаторов безопасности SID.
 |`OnDragEnter(DragEventArgs)` |Создает событие при перетаскивания объекта, когда курсор входит в пределы контейнера карточки.
 |`OnDragLeave(DragEventArgs)` |Создает событие, когда указатель выходит за границы контейнера карточки, в режиме перетаскивания.
 |`OnDrop(DragEventArgs, Folder)` |Создает событие завершения перетаскивания, при отпускании объекта в пределах контейнера карточки.
