--- a/modules/appendix/pages/controls/docsvision/TaskTreeView.adoc
+++ b/modules/appendix/pages/controls/docsvision/TaskTreeView.adoc
@@ -7,7 +7,7 @@ image::ROOT:task-tree-view.png[Элемент управления "TaskTreeView
 
 == Свойства
 
-* `*AllowedOperations*` -- список операций (см. описание ``xref:BackOffice-WinForms:Controls/TaskTreeViewOperation_EN.adoc[TaskTreeViewOperation] ``), доступных из контекстного меню `_TaskTreeView_`.
+* `*AllowedOperations*` -- список операций (см. описание `xref:BackOffice-WinForms:Controls/TaskTreeViewOperation_EN.adoc[TaskTreeViewOperation]`), доступных из контекстного меню `_TaskTreeView_`.
 * `*Columns*` -- перечисление типов (см. описание перечисления `xref:BackOffice-WinForms:Controls/TaskTreeViewColumn_EN.adoc[TaskTreeViewColumn]`) отображаемых колонок.
 +
 .Например:
