--- a/modules/scripts/pages/get-control.adoc
+++ b/modules/scripts/pages/get-control.adoc
@@ -63,7 +63,7 @@ private void FindControl_ItemClick(System.Object sender, DevExpress.XtraBars.Ite
 |Ссылки |`DocsVision.BackOffice.WinForms.Controls.ReferenceListView`
 |Строка |`DevExpress.XtraEditors.TextEdit`
 |Строка конструктора справочников |`DocsVision.BackOffice.WinForms.Controls.UniversalItemChooseBox`
-|Таблица |`https://docs.microsoft.com/ru-ru/dotnetxref:api/system.windows.forms.usercontrol[System.Windows.Forms.UserControl]`
+|Таблица |`https://docs.microsoft.com/ru-ru/dotnet/api/system.windows.forms.usercontrol[System.Windows.Forms.UserControl]`
 |Текст |`DevExpress.XtraEditors.MemoEdit`
 |Целое число |`DevExpress.XtraEditors.SpinEdit`
 |Число |`DevExpress.XtraEditors.SpinEdit`
